--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -3,7 +3,9 @@ h1 {
   font-family: "Playfair Display", serif;
   font-weight: bold;
 }
-
+b{
+  color: red;
+}
 p {
   font-family: "Poppins", sans-serif;
   font-weight: normal;
