--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -33,6 +33,14 @@ p {
   text-align: center;
   padding: 160px 20px;
 }
+
+.about-section{
+  text-align: center;
+  padding: 0;
+}
+
+
+
 .hero p{
   font-family: "playfair Display", serif;
   font-size: 36px;
@@ -46,7 +54,24 @@ p {
   font-weight: normal;
   font-size: 24px;
   line-height: 1.5;
+}
 
+.about-section{
+padding: 160px 20px ;
+}
+
+.about-section h1{
+font-size: 64px;
+line-height: 80px;
+}
+
+.about-section h2{
+font-size: 18px;
+font-family: var(--default-font-family);
+}
+
+.about-section-content{
+  margin: 30px;
 }
 
 .btn-branding{
@@ -55,7 +80,7 @@ p {
  color: white;
  font-size:18px;
  line-height: 27px;
- padding: 15px 30px ;
+ padding: 15px 30px;
 }
 
 .btn-branding-outline{
@@ -70,10 +95,17 @@ p {
   padding:120px 60px;
 }
 
+img{
+border-radius: 20px;
+
+
+}
+
+
 @media (max-width: 900px){
   h1{
    font-size: 44px;
-   line-height: 2;
+  line-height: 2;
   }
 
   h2{
